# hassio-ecoflow-api

./: .cursorrules  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  DELTA_PRO_3_API_MAPPING.md  GITHUB_RELEASE_DESCRIPTION.md  LICENSE  Makefile  README.md  RELEASE_CHECKLIST_v1.2.0.md  RELEASE_NOTES.md  RELEASE_NOTES_beta7.md  RELEASE_NOTES_v1.2.0.md  RELEASE_NOTES_v1.2.1.md  RELEASE_NOTES_v1.3.0-beta1.md  RELEASE_NOTES_v1.3.0-beta8.md  RELEASE_NOTES_v1.3.0-beta9.md  RELEASE_NOTES_v1.4.0-beta4.md  RELEASE_NOTES_v1.4.0.md  SECURITY.md  api_response_MR51ZES5PG860274.json  branch-protection-restore.json  check_structure.py  config.example.json  create_release_zip.py  device_data_full.json  git_release_commands.txt  hacs.json  lint.bat  make_zip.py  pyproject.toml  release-notes-v1.4.2.md  release-notes-v1.5.0-beta.1.md  release_notes.txt  requirements-lint.txt  requirements-test.txt  run_tests.py  scripts.ps1  setup-linting.md
.github/workflows/: validate.yaml
automations/: ecoflow_battery_alerts.yaml  ecoflow_power_switch.yaml  ecoflow_smart_charging.yaml
custom_components/ecoflow_api/: __init__.py  api.py  binary_sensor.py  button.py  config_flow.py  const.py  coordinator.py  data_holder.py  diagnostics.py  entity.py  hassio-ecoflow-api.code-workspace  hybrid_coordinator.py  manifest.json  migrations.py  mqtt_client.py  number.py  recorder.py  select.py  sensor.py  strings.json  switch.py
custom_components/ecoflow_api/devices/: __init__.py
custom_components/ecoflow_api/devices/delta_pro_3/: __init__.py  const.py
custom_components/ecoflow_api/translations/: en.json  uk.json
examples/: template_sensors.yaml
scripts/: __init__.py  __main__.py
tests/: README.md  __init__.py  conftest.py
